# dok-klaim-extractor

./: .gitignore  main.py  pyproject.toml
src/parser/: extractor.py  main.py  reader.py  schema.py  searcher.py
src/preprocessor/: main.py
src/trainer/: main.py
